Make config separate, UI fixes.